-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.6.0
-
3
-
13705
If I double mount a client (for example with MOUNT_2=y llmount.sh) then the second mount point will have a missing /proc/fs/lustre/lmv/*/target_obds directory.
u:~# umount /mnt/lustre u:~# umount /mnt/lustre2 #### u:~# mount -o user_xattr,flock u@tcp:/lustre /mnt/lustre -t lustre u:~# ls /proc/fs/lustre/lmv/ lustre-clilmv-ffff8801f6d64e60 u:~# ls /proc/fs/lustre/lmv/lustre-clilmv-ffff8801f6d64e60/ activeobd desc_uuid md_stats numobd placement target_obd target_obds uuid u:~# ls -l /proc/fs/lustre/lmv/lustre-clilmv-ffff8801f6d64e60/target_obds/ total 0 lrwxrwxrwx 1 root root 48 Apr 24 12:49 lustre-MDT0000-mdc-ffff8801f6d64e60 -> ../../../mdc/lustre-MDT0000-mdc-ffff8801f6d64e60 u:~# u:~# mount -o user_xattr,flock u@tcp:/lustre /mnt/lustre2 -t lustre u:~# ls /proc/fs/lustre/lmv/ lustre-clilmv-ffff8801f487f778 lustre-clilmv-ffff8801f6d64e60 u:~# ls /proc/fs/lustre/lmv/lustre-clilmv-ffff8801f487f778 activeobd desc_uuid md_stats numobd placement target_obd uuid u:~#
I see this when I unmount the second client mount:
[ 263.149071] LustreError: 3790:0:(lmv_obd.c:761:lmv_disconnect()) /proc/fs/lustre/lmv/lustre-clilmv-ffff8802169bc688/target_obds missing